--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,27 @@ label {
     font-weight: bold;
 }
 
-input[type="text"], input[type="number"] {
+select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+option {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type="text"] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
