--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ label {
 select {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 8px 0; 
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -180,6 +180,16 @@ select {
 }
 
 option {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type="overview"] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
