--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,15 @@
-body {
-    font-family: 'Philosopher', sans-serif;
-    z-index: 0;
+* {
+    font-family: Montserrat;
 }
 
-
-/* font-family: 'Montserrat', sans-serif; */
+body {
+    z-index: 0;
+    margin: 0;
+}
 
 .wrap {
     width: 100%;
-    background: linear-gradient(180deg, #695da6 3.44%, rgba(60, 26, 174, 0.98) 59.35%, #1e03a9 83.25%);
+    background: linear-gradient(180deg, #7163b8 3.44%, rgba(60, 26, 174, 0.98) 59.35%, #2201c8 83.25%);
     padding-top: 30px;
     position: relative;
     z-index: 0;
@@ -18,32 +19,16 @@ body {
     content: '';
     display: block;
     position: absolute;
-    top: 0;
+    top: 5px;
     left: 0;
     right: 0;
     height: 349px;
     width: 100%;
-    background-image: url('./images/wave\ \(6\).svg');
+    background-image: url('../images/wave (6).svg');
     background-size: cover;
     background-position: 0 0;
     z-index: -1;
 }
-
-.wrap::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: 130px;
-    left: 0;
-    right: 0;
-    height: 349px;
-    width: 100%;
-    background-image: url('./images/wave\ \(5\).svg');
-    background-size: cover;
-    background-position: 0 0;
-    z-index: -1;
-}
-
 
 .container {
     width: 100%;
@@ -58,22 +43,53 @@ body {
     margin-right: 20px;
 }
 
+.container_2 {
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+}
+
 .header {
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
+.logo > img {
+    height: 100px;
+    width: 100px;
+}
 
+.footer__logo > a > img {
+    height: 80px;
+    width: 80px;
+
+}
 
 .nav {
     display: flex;
 }
 
 .nav_item {
+    list-style-type: none;
     margin-right: 76px;
 }
+
+.nav_item2 {
+    list-style-type: none;
+    margin-right: 10px;
+    margin-left: 30px;
+}
+
+.nav_item3 {
+    list-style-type: none;
+    margin-right: 60px;
+    margin-left: 0px;
+}
+
 
 .nav_item_link {
     text-decoration: none;
@@ -83,35 +99,12 @@ body {
     color: #F2F6FF;
 }
 
-.nav_item2 {
-    margin-right: 10px;
-    margin-left: 30px;
-}
-
-.nav_item3 {
-    margin-right: 60px;
-    margin-left: 0px;
-}
-
-
 .nav_item_link2 {
     text-decoration: none;
     font-weight: 400;
     font-size: 30px;
     line-height: 18px;
     color: #F2F6FF;
-}
-
-.nav_item_link3 {
-    text-decoration: none;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 18px;
-    color: #F2F6FF;
-}
-
-.insta_logo {
-    height: 30px;
 }
 
 .intro {
@@ -160,56 +153,8 @@ body {
     line-height: 22px;
 }
 
-.asel {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    height: 400px;
-}
-
-.about_us {
-    margin-top: 30px;
-    padding-top: 100px;
-    margin-bottom: 50px;
-}
-
-.about_us_info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.about_us_text {
-    max-width: 395px;
-}
-
-.about_us_text_1 {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 22px;
-    color: #D8D5F9
-}
-
-.h2 {
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 36px;
-    color: #D8D5F9;
-    margin-top: 10px;
-}
-
-.about_us_cart {
-    max-width: 710px;
-    background: rgba(255, 255, 255, 0.5);
-    box-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(10.5px);
-    border-radius: 30px;
-
-}
-
 .why_th {
     padding: 50px;
-    width: 100%;
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(10.5px);
@@ -224,329 +169,24 @@ body {
     color: #FFFFFF;
     text-align: center;
 }
-.why_th_text_1 {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 20px;
-    letter-spacing: 0.05em;
-    color: #FFFFFF;
-    
-}
-.kriterii{
-    width: 380px;
-}
-.kriterii_flex{
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-}
-.about_us_card_text {
-    margin: 40px 50px;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 27px;
-    letter-spacing: 0.05em;
-    color: rgba(0, 0, 0, 0.7);
-}
+
 
 .wrap_2 {
     background: linear-gradient(180deg, #1F1F47 0%, #1F1F47 100%);
     width: 100%;
-
-}
-
-.couses_children {
-    margin: 30px;
-    font-size: 35px;
-    line-height: 24px;
-    color: rgb(15, 12, 156);
-    text-align: center;
-}
-
-.create_course {
-    margin: 20px;
-    
-    text-align: right;
-    line-height: 18px;
-    
-    font-size: 30px;
-  }
-
-.create_course > a {
-    color: #ea0a0a;
-    text-decoration: none;
-}
-
-.courses {
-    margin: 28px;
-    display: inline-block; 
-}
-
-
-.couses_cart {
-    text-align: center;
-    width: 350px;
-    transition: .5s;
-    padding: 30px;
-    background: linear-gradient(209.21deg, rgb(15, 12, 156) 13.57%, rgb(2, 114, 194) 98.38%);
-    border-radius: 20px;
-    filter: drop-shadow(0px 0px 7px rgba(255, 255, 255, 0.7));
-    display: flex;
-    flex-direction: column;
-    margin-right: 20px;
-}
-
-
-.couses_cart:hover {
-    transform: scale(1.1);
-}
-
-.couses_cart_2:hover {
-    transform: scale(1.1);
-}
-
-.course_cart_image {
-    display: block;
-    width: 180px;
-    margin: 0 auto;
-    margin-top: 20px;
-}
-
-.course_cart_info {
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.course_card_trans {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 20px;
-    color: #FFFFFF;
-    margin-left: 10px;
-}
-
-.course_card_descr {
-    margin-top: 8px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.05em;
-    color: rgba(255, 255, 255, 0.9);
-}
-.course_card_descr_2 {
-    text-align: center;
-    color: #1F1F47;
-    font-size: 16px;
-    line-height: 22px;
-    
-}
-
-.price{
-    padding: 5px;
-    background: rgba(255, 255, 255, 0.5);
-    box-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(10.5px);
-    border-radius: 10px;
-    display: block;
-    align-items: center;
-    justify-content: center;
-    margin-top: auto;
-    
-}
-
-.team {
-    margin-top: 100px;
-}
-.team_card_left .team_card_right{
-    display: none;
-}
-.team_cards {
-    margin-top: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.team_card {
-    width: 560px;
-    height: 440px;
-    background: rgba(255, 255, 255, 0.4);
-    border-radius: 20px;
-    filter: drop-shadow(0px 0px 7px rgba(255, 255, 255, 0.7));
-    display: flex;
-    justify-content: space-between;
-    padding: 25px;
-}
-
-
-.team_card_left {
-    width: 260px;
-    height: 390px;
-    border-radius: 20px;
-}
-
-.teacher_img {
-    width: 260px;
-}
-
-.team_card_right {
-    width: 230px;
-}
-
-.teacher_name {
-    font-family: 'Philosopher';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 36px;
-    color: #FFFFFF;
-
-    margin-bottom: 30px;
-}
-.icon{
-    width: 30px;
-    height: 30px;
-}
-
-.teacher_skill {
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-}
-
-.teacher_skill_text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    color: #FFFFFF;
-    margin-left: 10px;
-}
-.teacher_skill_offer {
-    width: 100%;
-    max-width: 85px;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18px;
-    color: #FFFFFF;
-}
-
-.h4 {
-    margin-top: 60px;
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 54px;
-    color: #D8D5F9;
-    text-align: center;
-}
-
-.galery_wrap {
-    margin-top: 60px;
-
-    overflow-x: hidden;
-    padding: 40px 20px;
-    position: relative;
-}
-
-.galery_item {
-    width: 320px;
-    filter: drop-shadow(0px 0px 4px #FFFFFF);
-    border-radius: 40px;
-    margin-right: 50px;
-}
-
-.gallery_item img {
-    width: 320px;
-    border-radius: 40px;
-    filter: drop-shadow(0px 0px 4px #FFFFFF);
-}
-
-.galery_wrap .slick-arrow {
-    position: absolute;
-    bottom: 42px;
-}
-
-.wrap_2 {
-    padding-bottom: 100px;
-}
-
-.galery_wrap { 
-    position: relative;
-}
-
-.galery_slider {
-    position: relative;
-}
-
-.btn {
-    position: absolute;
-    bottom: 40px;
-}
-
-.btn_right {
-    right: 0;
-}
-
-.btn_left {
-    left: 0;
-
-}
-
-.slick-dots {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-}
-
-.slick-dots button {
-    font-size: 20;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    padding: 0;
-    border: none;
-    margin-right: 50px;
-    color: #fff;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 40px;
-    font-weight: 600;
-    background-color: transparent;
-}
-
-.slick-dots li:last-child button {
-    margin-right: 0;
-}
-
-.slick-dots li.slick-active button {
-    background-color: transparent;
-    border: 1px solid #fff
-}
-
-.gallery_item {
-    text-align: center;
-    padding: 15px 15px;
-}
-
-.gallery_item img {
-    max-width: 100%;
+    padding-top: 60px;
 }
 
 .contacts {
     margin-top: 105px;
 }
-
 .contacts__wrap {
     display: flex;
     align-items: center;
 }
-
 .contacts__block {
     max-width: 530px;
 }
-
 .contacts__header h1 {
     color: #D8D5F9;
     font-size: 46px;
@@ -554,7 +194,6 @@ body {
     font-family: 'Montserrat', sans-serif;
     line-height: 24px;
 }
-
 .contacts__header p {
     color: #D8D5F9;
     font-size: 14px;
@@ -562,13 +201,10 @@ body {
     font-family: 'Montserrat', sans-serif;
     line-height: 24px;
     margin-top: 25px;
-
 }
-
 .contacts__form {
     margin-top: 80px;
 }
-
 .form__input {
     display: block;
     width: 100%;
@@ -582,22 +218,18 @@ body {
     height: 50px;
     font-size: 18px;
 }
-
 .form__input::placeholder {
     font-size: 18px;
     color: #D8D5F9;
 }
-
 .form__checkbox {
     margin-left: 28px;
 }
-
 .contacts__form span {
     color: #D8D5F9;
     font-family: "Inter", sans-serif;
     letter-spacing: 0.5px;
 }
-
 .form__btn {
     display: block;
     width: 500px;
@@ -613,13 +245,10 @@ body {
     margin-top: 48px;
     cursor: pointer;
     transition: .5s ease;
-
 }
-
 .form__btn:hover {
     box-shadow: 0 0 20px -1px #fff;
 }
-
 .contacts__map {
     width: 520px;
     height: 683px;
@@ -628,20 +257,15 @@ body {
     margin-left: 50px;
     margin-left: auto;
 }
-
 .contacts {
     position: relative;
     z-index: 0;
 }
-
 .footer {
     margin-top: 80px;
     padding: 80px 0;
-    /* border-top:1px solid #777777ba; */
+    width: 100%;
     position: relative;
-    background-image: url('./images/wave\ \(7\).svg');
-    background-size: cover;
-
 }
 
 .footer .container {
@@ -649,17 +273,19 @@ body {
     align-items: center;
     justify-content: space-between;
 }
-
 .footer__nav ul {
     display: flex;
     align-items: center;
-
 }
+
 .footer__nav__item{
+    list-style-type: none;
     margin-right: 30px;
 }
 
 .footer__nav li.footer__nav__item a {
+    padding-left: 60px;
+    padding-right: 60px;
     color: #F2F6FF;
     font-size: 16px;
     letter-spacing: 1px;
@@ -668,27 +294,34 @@ body {
     text-decoration: none;
 }
 
-/* .footer__nav li.footer__nav__item:not(:last-child) {
-    margin-right: 48px;
-} */
+.footer__nav > ul {
+    padding-right: 40px;
+} 
 
-.wrap_2 {
-    padding-bottom: 0;
+.footer__social {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
-* {
-    font-family: Montserrat;
+.footer__logo {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
-.form-signin {
-    
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: center;
+footer::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 5px;
+    left: 0;
+    right: 0;
+    height: 223px;
+    width: 100%;
+    background-image: url('../images/wave (7).svg');
+    background-size: cover;
+    background-position: 0 0;
+    z-index: 0;
 }
 
-.nav_item3 {
-    padding-left: 20px;
-}
