--- a/css/command.css
+++ b/css/command.css
@@ -173,57 +173,94 @@ footer::before {
     z-index: -1;
 }
 
-.about_us {
-    padding-top: 80px;
-    padding-left: 80px;
-    padding-right: 80px;
-}
 
-.container_about_us {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    width: 100%;
-    background: linear-gradient(180deg, #1d03a1 3.44%, rgb(88 54 202 / 98%) 59.35%, #6d58d4 83.25%);
-    position: relative;
-    z-index: 0;
-    border-radius: 30px;
+.team {
+    margin-top: 100px;
 }
-
-.about_us_info {
+.team_card_left .team_card_right{
+    display: none;
+}
+.team_cards {
+    margin-top: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.about_us_text {
-    max-width: 395px;
+.team_card {
+    width: 560px;
+    height: 510px;
+    background: rgba(255, 255, 255, 0.4);
+    border-radius: 20px;
+    filter: drop-shadow(0px 0px 7px rgba(255, 255, 255, 0.7));
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
 }
-.about_us_text_1 {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 22px;
-    color: #D8D5F9
+.team_card_left {
+    width: 260px;
+    height: 390px;
+    border-radius: 20px;
 }
-.h2 {
+.teacher_img {
+    width: 260px;
+}
+.team_card_right {
+    width: 230px;
+}
+.teacher_name {
+    font-family: 'Philosopher';
+    font-style: normal;
     font-weight: 700;
     font-size: 32px;
     line-height: 36px;
-    color: #D8D5F9;
-    margin-top: 10px;
-}
-.about_us_cart {
-    max-width: 710px;
-    background: rgba(255, 255, 255, 0.5);
-    box-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(10.5px);
-    border-radius: 30px;
+    color: #FFFFFF;
+    margin-bottom: 30px;
 }
 
-.about_us_card_text {
-    margin: 40px 50px;
+.teacher_skill {
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+}
+.teacher_skill_text {
     font-weight: 400;
-    font-size: 24px;
-    line-height: 27px;
-    letter-spacing: 0.05em;
-    color: rgba(0, 0, 0, 0.7);
+    font-size: 14px;
+    line-height: 18px;
+    color: #FFFFFF;
+    margin-left: 10px;
+}
+.teacher_skill_offer {
+    width: 100%;
+    max-width: 85px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #FFFFFF;
+}
+.h4 {
+    margin-top: 60px;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 54px;
+    color: #D8D5F9;
+    text-align: center;
+}
+
+.couses_children {
+    margin: 30px;
+    font-size: 35px;
+    line-height: 24px;
+    color: #ffffffe8;
+    text-align: center;
+}
+
+
+.wrap_2 {
+    padding-bottom: 100px;
+}
+
+.team__wrap {
+    padding-left: 60px;
+    padding-right: 60px;
 }
