--- a/css/course.css
+++ b/css/course.css
@@ -173,57 +173,96 @@ footer::before {
     z-index: -1;
 }
 
-.about_us {
-    padding-top: 80px;
-    padding-left: 80px;
-    padding-right: 80px;
+
+
+.couses_children {
+    margin: 30px;
+    font-size: 35px;
+    line-height: 24px;
+    color: #ffffffe8;
+    text-align: center;
 }
 
-.container_about_us {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    width: 100%;
-    background: linear-gradient(180deg, #1d03a1 3.44%, rgb(88 54 202 / 98%) 59.35%, #6d58d4 83.25%);
-    position: relative;
-    z-index: 0;
-    border-radius: 30px;
-}
+.create_course {
+    margin: 20px;
+    
+    text-align: right;
+    line-height: 18px;
+    
+    font-size: 30px;
+  }
 
-.about_us_info {
+
+.create_course > a {
+    color: #00fb11;
+    text-decoration: none;
+}
+.courses {
+    margin: 28px;
+    display: inline-block; 
+}
+.couses_cart {
+    text-align: center;
+    width: 350px;
+    transition: .5s;
+    padding: 30px;
+    background: linear-gradient(209.21deg, rgb(15, 12, 156) 13.57%, rgb(2, 114, 194) 98.38%);
+    border-radius: 20px;
+    filter: drop-shadow(0px 0px 7px rgba(255, 255, 255, 0.7));
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    margin-right: 20px;
 }
-
-.about_us_text {
-    max-width: 395px;
+.couses_cart:hover {
+    transform: scale(1.1);
 }
-.about_us_text_1 {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 22px;
-    color: #D8D5F9
+.couses_cart_2:hover {
+    transform: scale(1.1);
 }
-.h2 {
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 36px;
-    color: #D8D5F9;
+.course_cart_image {
+    display: block;
+    width: 180px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.course_cart_info {
     margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.about_us_cart {
-    max-width: 710px;
+.course_card_trans {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 20px;
+    color: #FFFFFF;
+    margin-left: 10px;
+}
+.course_card_descr {
+    margin-top: 8px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: rgba(255, 255, 255, 0.9);
+}
+.course_card_descr_2 {
+    text-align: center;
+    color: #1F1F47;
+    font-size: 16px;
+    line-height: 22px;
+    
+}
+.price{
+    padding: 5px;
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(10.5px);
-    border-radius: 30px;
-}
-
-.about_us_card_text {
-    margin: 40px 50px;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 27px;
-    letter-spacing: 0.05em;
-    color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    margin-top: auto;
+    
 }
