--- a/css/about-us.css
+++ b/css/about-us.css
@@ -145,7 +145,7 @@ body {
     text-decoration: none;
     font-weight: 400;
     font-size: 30px;
-    line-height: 18px;
+    line-height: 18px; 
     color: #F2F6FF;
 }
 
@@ -154,6 +154,7 @@ body {
     padding: 10px 20px;
     box-shadow: 0 5px 10px rgb(255, 255, 255);
     border-radius: 7px;
+    border: 1px solid rgba(0, 0, 0, 0.729);
     width: 200px;
     visibility: hidden;
     opacity: 0;
