--- a/css/course.css
+++ b/css/course.css
@@ -154,6 +154,7 @@ body {
     padding: 10px 20px;
     box-shadow: 0 5px 10px rgb(255, 255, 255);
     border-radius: 7px;
+    border: 1px solid rgba(0, 0, 0, 0.729);
     width: 200px;
     visibility: hidden;
     opacity: 0;
@@ -245,8 +246,6 @@ footer::before {
     z-index: -1;
 }
 
-
-
 .couses_children {
     margin: 30px;
     font-size: 35px;
@@ -256,34 +255,44 @@ footer::before {
 }
 
 .create_course {
-    margin: 20px;
-    
-    text-align: right;
+    padding-left: 95px;
+    max-width: 215px;
     line-height: 18px;
     
-    font-size: 30px;
-  }
-
-
-.create_course > a {
-    color: #00fb11;
-    text-decoration: none;
 }
+
+.courses_box {
+    padding: 0 60px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.create_course a {
+    font-size: 22px;
+    color: #00ff11;
+    text-decoration: none;
+    transition: color 0.1s;
+}
+
+.create_course a:hover {
+    color: #c269f2; /* Цвет текста при наведении */
+}
+
 .courses {
-    margin: 28px;
     display: inline-block; 
 }
 .couses_cart {
     text-align: center;
     width: 350px;
-    transition: .5s;
+    transition: .2s;
     padding: 30px;
     background: linear-gradient(209.21deg, rgb(15, 12, 156) 13.57%, rgb(2, 114, 194) 98.38%);
     border-radius: 20px;
     filter: drop-shadow(0px 0px 7px rgba(255, 255, 255, 0.7));
     display: flex;
     flex-direction: column;
-    margin-right: 20px;
+    margin: 24px;
 }
 .couses_cart:hover {
     transform: scale(1.1);
