--- a/css/profile.css
+++ b/css/profile.css
@@ -148,6 +148,7 @@ body {
     padding: 10px 20px;
     box-shadow: 0 5px 10px rgb(255, 255, 255);
     border-radius: 7px;
+    border: 1px solid rgba(0, 0, 0, 0.729);
     width: 200px;
     visibility: hidden;
     opacity: 0;
