--- a/css/create_course.css
+++ b/css/create_course.css
@@ -1,15 +1,263 @@
+* {
+    font-family: Montserrat;
+}
+
+body {
+    z-index: 0;
+    margin: 0;
+}
+ 
+.wrap {
+    width: 100%;
+    background: linear-gradient(180deg, #7163b8 3.44%, rgba(60, 26, 174, 0.98) 59.35%, #2201c8 83.25%);
+    padding-top: 30px;
+    position: relative;
+    z-index: 0;
+}
+
+.wrap::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 5px;
+    left: 0;
+    right: 0;
+    height: 349px;
+    width: 100%;
+    background-image: url('../images/wave (6).svg');
+    background-size: cover;
+    background-position: 0 0;
+    z-index: -1;
+}
+
+.container {
+    display: flex;
+    width: 100%;
+    max-width: 1175px;
+    margin: 0 auto;
+}
+
+.container2 {
+    width: 100%;
+    margin: 0 auto;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.container_2 {
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+}
+
+.header {
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.logo > img {
+    height: 100px;
+    width: 100px;
+}
+
+.footer__logo > a > img {
+    height: 80px;
+    width: 80px;
+
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    padding-left: 200px;
+}
+
+.nav_item {
+    list-style-type: none;
+    margin-right: 76px;
+}
+
+.nav_item2 {
+    padding-top: 7px;
+    list-style-type: none;
+    margin-right: 10px;
+    margin-left: 30px;
+}
+
+.nav_item3 {
+    list-style-type: none;
+    margin-right: 60px;
+    margin-left: 0px;
+}
+
+
+.nav_item_link {
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 18px;
+    color: #F2F6FF;
+}
+
+.nav_item_link2 {
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 18px;
+    color: #F2F6FF;
+}
+
+.user-box {
+    display: flex;
+    width: 327px; 
+    align-items: center;
+}
+
+#user-options {
+    margin-left: 10px;
+    padding: 5px;
+}
+
+.user-box a {
+    padding-top: 5px;
+    padding-bottom: 8px;
+    text-decoration: none;
+    line-height: 18px;
+    color: #F2F6FF;
+    display: block;
+    white-space: nowrap; /* Запрещает перенос текста на новую строку */
+    overflow: hidden; /* Скрывает содержимое, которое не помещается */
+    text-overflow: ellipsis; /* Заменяет не помещающееся содержимое многоточием */
+}
+
+.dropdown {
+    padding-top: 7px;
+    padding-left: 42px;
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-toggle {
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 18px; 
+    color: #F2F6FF;
+}
+
+.dropdown-menu {
+    background-color: aliceblue;
+    padding: 10px 20px;
+    box-shadow: 0 5px 10px rgb(255, 255, 255);
+    border-radius: 7px;
+    border: 1px solid rgba(0, 0, 0, 0.729);
+    width: 200px;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -1;
+    position: absolute;
+}
+
+.dropdown-menu.show {
+    z-index: 99;
+    visibility: visible;
+    opacity: 1;
+}
+
+.dropdown-menu a {
+    display: block;
+    padding: 10px 0;
+    color: #000;
+    opacity: 0.6;
+    text-decoration: none;
+}
+
+.dropdown-menu a:hover {
+    opacity: 1;
+}
+
+
+.footer {
+    margin-top: 80px;
+    padding-top: 80px;
+    padding-bottom: 30px;
+    width: 100%;
+    position: relative;
+}
+
+.footer .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer__nav ul {
+    display: flex;
+    align-items: center;
+}
+
+.footer__nav__item{
+    list-style-type: none;
+    margin-right: 30px;
+}
+
+.footer__nav li.footer__nav__item a {
+    padding-left: 60px;
+    padding-right: 60px;
+    color: #F2F6FF;
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-family: 'Philosopher';
+    font-weight: 400;
+    text-decoration: none;
+}
+
+.footer__nav > ul {
+    padding-right: 40px;
+} 
+
+.footer__social {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+.footer__logo {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+footer::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 5px;
+    left: 0;
+    right: 0;
+    height: 188px;
+    width: 100%;
+    background-image: url('../images/wave (7).svg');
+    background-size: cover;
+    background-position: 0 0;
+    z-index: -1;
+}
+
 
 .newcourse {
     max-width: 500px;
     margin: 0 auto;
 }
-
+ 
 label {
     display: block;
     margin-bottom: 8px;
 }
 
-input[type="text"],
+input[type="text"],[type="numeric"],[type="date"],
 textarea {
     width: 100%;
     padding: 8px;
@@ -18,6 +266,8 @@ textarea {
 }
 
 input[type="submit"] {
+    font-size: 20px;
+    width: 100%;
     background-color: #4caf50;
     color: white;
     padding: 10px 15px;
@@ -28,4 +278,17 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: #45a049;
+}
+
+.submit {
+    padding-top: 15px;
+}
+
+.newcourse {
+    max-width: 500px;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
 }
