Добавляем адаптивку на главную страницу

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -326,6 +326,16 @@ footer::before {
     color: rgba(0, 0, 0, 0.7);
 }
 
+.nav_item_login,
+.nav_item_register {
+    display: none;
+}
+
+.nav_item_login a,
+.nav_item_register a {
+    display: none;
+}
+
 @media (max-width: 768px) {
     .header__burger-btn {
         display: block;
@@ -336,9 +346,12 @@ footer::before {
         left: -400px;
         top: 0;
         width: 260px;
-        background-color: blueviolet;
+        /* background-color: blueviolet; */
+        background-color: rgba(255, 255, 255, 0.5);
         padding: 75px 20px 20px 20px;
         transition: transform .5s;
+        z-index: 1;
+        border-radius: 30px;
     }
 
     .nav {
@@ -347,7 +360,7 @@ footer::before {
     }
 
     .nav_item_link {
-        color: white;
+        color: rgba(0, 0, 0, 0.7);
         font-size: 21px;
         display: block;
         padding: 10px 0px;
@@ -364,16 +377,18 @@ footer::before {
     /* Добавляем Вход и Регистрация */
     .nav_item_login,
     .nav_item_register {
+        display: block;
         list-style-type: none;
         margin-right: 20px; /* Можете настроить отступ по вашему усмотрению */
     }
 
     .nav_item_login a,
     .nav_item_register a {
+        display: block;
         text-decoration: none;
         font-weight: 400;
         font-size: 16px;
         line-height: 18px;
-        color: #F2F6FF;
+        color: rgba(0, 0, 0, 0.7);
     }
 }
